# MULTIAGENT

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/.github/workflows/: ci.yml
app/: blackboard.py  config.py  logging_setup.py  main.py  scheduler.py
app/agents/: __init__.py  base.py  critic.py  data_analysis.py  hypothesis.py  local_text.py  memory.py  planner.py  rag.py  router.py  summary.py  vision.py  web_search.py
app/caching/: embeddings_cache.py  llm_cache.py  sqlite_kv.py  web_cache.py
app/eval/: harness.py  metrics.py
app/guardrails/: schemas.py
app/models/: embeddings.py  local_llm.py  openai_llm.py
app/rag/: chunking.py  vectorstore.py
app/utils/: hashing.py  token_budget.py
app/web/: http_client.py
corpus/: gpt5_overview.txt  local_llms.txt
datasets/eval/: prompts.jsonl
multiagent_gpt5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: eval.py  run.py
tests/: conftest.py  test_end_to_end_smoke.py  test_planner.py  test_router.py  test_scheduler.py
